--- a/crm-frontend/src/assets/scss/hope-ui.scss
+++ b/crm-frontend/src/assets/scss/hope-ui.scss
@@ -67,3 +67,5 @@
 @import "./hope-ui-design-system/layout-style/index";
 @import "./hope-ui-design-system/helper/utilities";
 @import "./hope-ui-design-system/plugins/plugins";
+
+//Mine
